# jailhouse

./: .gitignore  README.md  config.h  test.c
configs/x86/: apic-demo.c  bazooka-inmate-linux.c  bazooka-inmate.c  bazooka-root-linux.c  bazooka-root.c  inspiron-inmate.c  inspiron-mgh.c  inspiron-root.c  mgh-demo.c  qemu-mgh.c
configs/x86/compare/: 2019-10-26_bazooka_2.config  2019-10-26_bazooka_4.config  2019-10-26_bazooka_kubuntu-1910_1.config  2019-10-26_bazooka_kubuntu-1910_3.config
configs/x86/old/: 2019-07-04_bazooka_kubuntu-1810.c  bazooka-demo.c  bazooka.c  bazooka0.c  bazooka_iommu_off.c  bazooka_iommu_on.c  bazooka_legacy.c
configs/x86/to-port/: inspiron-root.c  mgh-demo.c
driver/: cell.c  sysfs.c
hypervisor/: control.c  ivshmem.c  pci.c  printk.c
hypervisor/arch/x86/: cat.c  control.c  vmx.c
hypervisor/arch/x86/include/asm/: percpu.h  processor.h  vmx.h
hypervisor/include/jailhouse/: printk.h
include/arch/x86/asm/: jailhouse_hypercall.h
include/jailhouse/: hypercall.h
inmates/demos/x86/: .ivshmem-demo.c.swp  Makefile  apic-demo.c  bazooka-demo.c  ivshmem-demo.c  mgh-demo.c
inmates/lib/: count-set-bits-mgh.c  mgh-count-set-bits.c  mgh-prng.c  mgh-random-access.c  mgh-sha3.c
inmates/lib/x86/: Makefile  timing.c
inmates/lib/x86/include/: inmate.h
mgh/: README-MGH.md  README.md  TODO.md
mgh/docs/: README.jailhouse  README.md
mgh/ivshmem/: .gitignore  README.jailhouse
mgh/ivshmem/uio_kernel_module/: uio_ivshmem.c
mgh/ivshmem/userspace/: CMakeLists.txt  README.md  mgh.c
mgh/qemu/: .gitignore  README.md  setup-build-linux.md  setup-generate-image-files.md  setup-host.md  setup-inside-qemu-image.md  start-qemu-x86.sh
mgh/qemu/docs/: setup-generate-image-files.md
mgh/scripts/: .gitignore  build.sh  build_corefreq.sh  build_drivers.sh  check_drivers.sh  clean.sh  clean_drivers.sh  common.sh  create_initramfs.sh  cycles_to_seconds.sh  debug.sh  debug2.sh  end_apicdemo.sh  end_bazooka.sh  end_inmate.sh  end_inspiron_inmate.sh  end_ivshmem.sh  end_jailhouse.sh  end_mgh.sh  end_root.sh  install_jailhouse_driver.sh  install_uio_kernel_module.sh  load_drivers.sh  load_jailhouse_driver.sh  load_uio_driver.sh  monitor_console.sh  post_process.sh  post_process_folder.sh  remove_driver.sh  remove_drivers.sh  remove_jailhouse_driver.sh  remove_uio_driver.sh  show_cells.sh  show_stats_inmate.sh  show_stats_root.sh  sign_drivers.sh  start_apic_demo_inmate.sh  start_apicdemo_inmate.sh  start_bazooka.sh  start_bazooka_inmate.sh  (+20 more)
mgh/scripts/linux-configs/: .config-alpine-jailhouse
mgh/scripts/saved/2019-11-23/: data-csb-five-duration-no-throttle_2019-11-23_03-25-58.csv  data-csb-five-duration-throttle_2019-11-23_03-25-58.csv  data-csb-five-duration_2019-11-23_03-25-58.csv  data-csb-five-no-throttle_2019-11-23_03-25-58.csv  data-csb-five-throttle_2019-11-23_03-25-58.csv  data-five_2019-11-23_03-25-58.csv  data_2019-11-23_03-25-58.csv  data_2019-11-23_15-09-31.csv  data_ra_2019-11-23_15-09-31.csv  data_ra_durations_2019-11-23_15-09-31.csv  data_ra_durations_no_throttle_2019-11-23_15-09-31.csv  data_ra_durations_throttle_2019-11-23_15-09-31.csv  data_ra_latencies_2019-11-23_15-09-31.csv  data_ra_latencies_no_throttle_2019-11-23_15-09-31.csv  data_ra_latencies_throttle_2019-11-23_15-09-31.csv  data_sha3_2019-11-23_15-09-31.csv  data_sha3_durations_2019-11-23_15-09-31.csv  data_sha3_durations_no_throttle_2019-11-23_15-09-31.csv  data_sha3_durations_throttle_2019-11-23_15-09-31.csv  data_sha3_latencies_no_throttle_2019-11-23_15-09-31.csv  data_sha3_latencies_throttle_2019-11-23_15-09-31.csv  experiment_2019-11-23_03-25-58.txt  experiment_2019-11-23_15-09-31.txt  jailhouse_2019-11-23_03-25-58.txt  jailhouse_2019-11-23_15-09-31.txt
mgh/scripts/saved/2019-12-14/2019-12-14_23-33-23/: experiment_2019-12-14_23-33-23.txt  interference_2019-12-14_23-33-23.txt  jailhouse_2019-12-14_23-33-23.txt  throttled_2019-12-14_23-33-23.csv  throttled_avg_2019-12-14_23-33-23.csv  throttled_freq_2019-12-14_23-33-23.csv  unthrottled_2019-12-14_23-33-23.csv  unthrottled_avg_2019-12-14_23-33-23.csv  unthrottled_freq_2019-12-14_23-33-23.csv
mgh/scripts/saved/2019-12-14/2019-12-15_00-14-50/: experiment_2019-12-15_00-14-50.txt  interference_2019-12-15_00-14-50.txt  jailhouse_2019-12-15_00-14-50.txt  throttled_2019-12-15_00-14-50.csv  throttled_avg_2019-12-15_00-14-50.csv  throttled_freq_2019-12-15_00-14-50.csv  unthrottled_2019-12-15_00-14-50.csv  unthrottled_avg_2019-12-15_00-14-50.csv  unthrottled_freq_2019-12-15_00-14-50.csv
mgh/scripts/saved/2019-12-14/2019-12-15_01-07-25/: experiment_2019-12-15_01-07-25.txt  interference_2019-12-15_01-07-25.txt  jailhouse_2019-12-15_01-07-25.txt  throttled_2019-12-15_01-07-25.csv  throttled_avg_2019-12-15_01-07-25.csv  throttled_freq_2019-12-15_01-07-25.csv  unthrottled_2019-12-15_01-07-25.csv  unthrottled_avg_2019-12-15_01-07-25.csv  unthrottled_freq_2019-12-15_01-07-25.csv
mgh/scripts/saved/2020-02-15_sha3_runs/2020-02-15_02-31-01/: _cycles_throttled_2020-02-15_02-31-01.csv  _cycles_unthrottled_2020-02-15_02-31-01.csv  _freq_throttled_2020-02-15_02-31-01.csv  (+20 more)
mgh/sha3/: README.md  main.c  meson.build  sha3.c  sha3.h  sha3_mgh.c  test-profile.sh  test.sh
mgh/sha3/include/: sha3_mgh.h
mgh/sha3/src/: profile_main.c  sha3_mgh.c
mgh/uio-kernel-module/: README.md  uio_ivshmem.c
mgh/uio-userspace/: CMakeLists.txt  README.md  meson.build  mgh-demo.py  shmem_mgh.py  uio-userspace.c
mgh/uio-userspace/orig/: CMakeLists.txt
mgh/workloads/: README.md  build.sh  meson.build  test-count-bits.sh  test-count-set-bits.sh  test-prng.sh  test-profile.sh  test-random-access.sh  test-sha3-512-profile.sh  test-sha3-512.sh  test.sh
mgh/workloads/include/: sha3_mgh.h  workloads.h
mgh/workloads/src/: count-bits.c  count-set-bits.c  prng.c  random-access.c  sha3-512-profile.c  sha3-512.c
scripts/: end_ivshmem.sh  end_mgh.sh  end_mgh_root.sh  mgh_end_bazooka_jailhouse.sh  mgh_start_bazooka.sh  mgh_start_ivshmem.sh  mgh_start_jailhouse.sh  start_bazooka_mgh.sh  start_mgh_inmate.sh  start_mgh_root.sh
tools/: jailhouse-hardware-check  jailhouse.c
(+1454 files in other folders)
